# TermSync

./: .gitignore  CHANGELOG.md  README.md  inspect_cert.go  start.ps1
.claude/: settings.local.json
.github/workflows/: build-all.yml  quick-build.yml
desktop/: .gitignore  README.md
desktop/assets/: server.crt
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: dev-server.ps1
desktop/src-tauri/src/: api_client.rs  commands.rs  main.rs  pty_manager.rs  wss_client.rs
docs/: architecture.md  implementation-checklist.md
mobile-android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
mobile-android/app/: build.gradle.kts  key.properties  proguard-rules.pro
mobile-android/app/src/main/: AndroidManifest.xml
mobile-android/app/src/main/assets/terminal/: addon-fit.js  terminal.html
mobile-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile-android/app/src/main/res/values/: colors.xml  (+2 more)
server/: .env.example  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  pairing-runtime.err  pairing-runtime.out  server-root-start.err  server-root-start.out  server-runtime.err  server-runtime.out  verify-server.err  verify-server.out
server/certs/: server.key
server/cmd/gencert/: main.go
server/data/: verify.db-shm  verify.db-wal
server/handler/: handlers.go
server/models/: models.go
server/relay/: manager.go  manager_test.go
server/store/: sqlite.go  sqlite_test.go
(+9 files in other folders)
