[package]
name = "termsync-desktop"
version = "0.1.0"
description = "TermSync Cross-Platform Terminal Client"
authors = ["TermSync Team"]
edition = "2021"

[[bin]]
name = "termsync-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
rustls = "0.21"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
log = "0.4"
webpki-roots = "0.26"
base64 = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.30"
arboard = "3.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
